--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,15 +13,24 @@
     <string name="navigation_drawer_open">Abrir panel de navegacion</string>
     <string name="navigation_drawer_close">Close panel de navegacion</string>
     <string-array name="Carreras">
-    <item>LMAD</item>
-    <item>LM</item>
-    <item>LF</item>
-    <item>LSTI</item>
-    <item>LA</item>
-    <item>LCC</item>
+        <item>LMAD</item>
+        <item>LM</item>
+        <item>LF</item>
+        <item>LSTI</item>
+        <item>LA</item>
+        <item>LCC</item>
 
 
-</string-array>
+    </string-array>
+    <string name="title_activity_new_group">NewGroupActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
 
 </resources>
